overflow fixed

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -278,7 +278,8 @@ width:100%;
 
 .main-menu {
 padding-top:40px; margin:auto;overflow:hidden;
-width:613px;
+width:620px;
+
 }
 
 .main-menu li:last-child {
